--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,37 @@
 </head>
 <body>
     <header>
-
+        <h1>
+            Bienvenue sur l'API du Port de plaisance Russel
+        </h1>
     </header>
     <main>
-        <h1>
-            Bienvenue sur l'API du Port Russel
-        </h1>
-        <p>
-            Connexion <a href="/dashboard">au dashboard</a>
-        </p>
+        <section>
+            <p>
+            Cette API REST permet de gérer les catways et les réservations associées. Elle offre un espace 
+            administrateur sécurisé avec un tableau de bord, ainsi qu'une documentation de l'API accessible depuis la page d’accueil.
+            </p>
+            <a href="">
+                Voir la documentation de l'API
+            </a>
+        </section>
+        <section>
+            <h2>
+                Connexion
+            </h2>
+            <form method="POST" action="/login">
+                <input type="text" name="username" placeholder="Nom utilisateur" required>
+                <input type="password" name="password" placeholder="Mot de passe" required>
+                <button type="submit">Se connecter</button>
+            </form>
+        </section>
     </main>
     <footer>
-
+        <span>
+            <small>
+                © 2025 Port de plaisance Russel
+            </small>
+        </span>
     </footer>
 </body>
 </html>
