--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                 Connexion
             </h2>
             <form method="POST" action="/login">
-                <input type="text" name="username" placeholder="Nom utilisateur" required>
+                <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Mot de passe" required>
                 <button type="submit">Se connecter</button>
             </form>
