--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,14 @@
             <h2>
                 Connexion
             </h2>
-            <form method="POST" action="/login">
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Mot de passe" required>
+
+            <% if (typeof error !== 'undefined') {
+                %><p style="color: red;"><%= error %></p><%
+            }%>
+
+            <form method="POST" action="/user/login">
+                <input type="email" name="email" placeholder="Email" required autocomplete="email">
+                <input type="password" name="password" placeholder="Mot de passe" required autocomplete="current-password">
                 <button type="submit">Se connecter</button>
             </form>
         </section>
