--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Retour Tableau de bord</a></li>
-                <li><a href="/catway/<%= username %>/catwaysList">Liste des catways</a></li>
-                <li><a href="/booking/<%= username %>/bookingsList">Liste des réservations</a></li>
+                <li><a href="/dashboard">Retour Tableau de bord</a></li>
+                <li><a href="/catway/catwaysList">Liste des catways</a></li>
+                <li><a href="/booking/bookingsList">Liste des réservations</a></li>
             </ul>
         </nav>
     </header>
