--- a/views/catwaysList.ejs
+++ b/views/catwaysList.ejs
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/dashboard/<%= username %>">Retour Tableau de bord</a></li>
-                <li><a href="/catway/<%= username %>/catwaysList">Liste des catways</a></li>
-                <li><a href="/bookingsList">Liste des réservations</a></li>
+                <li><a href="/dashboard">Retour Tableau de bord</a></li>
+                <li><a href="/catway/catwaysList">Liste des catways</a></li>
+                <li><a href="/booking/bookingsList">Liste des réservations</a></li>
             </ul>
         </nav>
     </header>
@@ -23,16 +23,16 @@
                     <th>Numéro</th>
                     <th>Type</th>
                     <th>État</th>
-                    <th>Réservation</th>
+                    <th>Détail Catway</th>
                 </tr>
             </thead>
             <tbody>
                 <% catways.forEach(catway =>{ %>
                 <tr>
                     <td><%= catway.catwayNumber %></td>
-                    <td><%= catway.catwayType %></td>
+                    <td><%= catway.type %></td>
                     <td><%= catway.catwayState %></td>
-                    <td><a href="/catways/<%= catway._id %>/reservations">Voir les réservations</a></td>
+                    <td><a href="/catway/<%= catway._id %>">Détail catway</a></td>
                 </tr>
                 <% }) %>
             </tbody>
