--- a/views/catwaysList.ejs
+++ b/views/catwaysList.ejs
@@ -38,5 +38,12 @@
             </tbody>
         </table>
     </main>
+    <footer>
+        <span>
+            <small>
+                © 2025 Port de plaisance Russel
+            </small>
+        </span>
+    </footer>
 </body>
 </html>
