--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -138,7 +138,11 @@
         </section>
     </main>
     <footer>
-
+        <span>
+            <small>
+                © 2025 Port de plaisance Russel
+            </small>
+        </span>
     </footer>
     <% if (successMsg) { %>
     <script>
