--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -21,8 +21,8 @@
             <span>Numéro de catway : <%= booking.catwayNumber %></span>
             <span>Nom du client : <%= booking.clientName %></span>
             <span>Nom du bateau : <%= booking.boatName %></span>
-            <span>Date d'arrivée : <%= booking.checkIn %></span>
-            <span>Date de départ : <%= booking.checkOut %></span>
+            <span>Date d'arrivée : <%= booking.checkIn ? new Date(booking.checkIn).toLocaleDateString('fr-FR') : '' %></span>
+            <span>Date de départ : <%= booking.checkOut ? new Date(booking.checkOut).toLocaleDateString('fr-FR') : '' %></span>
         </div>
     </main>
     <footer>
