ajout déconnexion et vérification

--- a/views/catway.ejs
+++ b/views/catway.ejs
@@ -11,7 +11,10 @@
             <ul>
                 <li><a href="/dashboard">Retour Tableau de bord</a></li>
                 <li><a href="/catway/catwaysList">Liste des catways</a></li>
-                <li><a href="/booking/bookingsList">Liste des réservations</a></li>
+                <li><a href="/booking/bookingsList">Liste des réservations</a></li> 
+                <form action="/user/logout" method="post">
+                    <button type="submit">Déconnexion</button>
+                </form>
             </ul>
         </nav>
     </header>   
