installation de la doc et README.md

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
         <section>
             <p>
             Cette API REST permet de gérer les catways et les réservations associées. Elle offre un espace 
-            administrateur sécurisé avec un tableau de bord, ainsi qu'une documentation de l'API accessible depuis la page d’accueil.
+            administrateur sécurisé avec un tableau de bord, ainsi qu'une documentation de l'API accessible depuis le lien ci dessous.
             </p>
-            <a href="">
+            <a href="/docs" target="_blank">
                 Voir la documentation de l'API
             </a>
         </section>
